infra/k8s/comments-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments
  namespace: "prod"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comments
  template:
    metadata:
      labels:
        app: comments
    spec:
      containers:
        - name: comments
          image: weton01/comment
          ports:
            - containerPort: 3000
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: comments-srv
  namespace: "prod" 
spec:
  selector:
    app: comments
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
  type: NodePort
