infra/k8s/products-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product
  namespace: "prod"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product
  template:
    metadata:
      labels:
        app: product
    spec:
      containers:
        - name: product
          image: weton01/product:1.0.2
          ports:
            - containerPort: 3000
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: product-srv
  namespace: "prod" 
spec:
  selector:
    app: product
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
  type: NodePort
