infra/k8s/new-ingress-v2.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: example-ingress
  namespace: "prod"
  annotations:
#    ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
   # nginx.ingress.kubernetes.io/affinity: "cookie"
  #  nginx.ingress.kubernetes.io/session-cookie-name: "auth-cookie"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
        - path: /api/users
          backend:
            serviceName: auth-srv
            servicePort: 80
        - path: /api/products
          backend:
            serviceName: product-srv
            servicePort: 80
        - path: /api/comments
          backend:
            serviceName: comments-srv
            servicePort: 80
